update deploy.yml into the config-templates folder

--- a/configs-templates/deploy.yml
+++ b/configs-templates/deploy.yml
@@ -12,7 +12,7 @@ content:
       contentful:
         webHook:
           name: netlify
-          id: ngmc
+          id: {netlifySiteId}
       netlify:
         buildHook:
           branch: master
